--- a/base/om_2021_fall/test_06_05.Rmd
+++ b/base/om_2021_fall/test_06_05.Rmd
@@ -5,22 +5,22 @@ Question
 
 Answerlist
 ----------
-*  
-* Сильно уменьшить дисперсию оценок без смещения оценок.
-* Сильно увеличить дисперсию оценок без смещения оценок.
-* Сильно уменьшить смещение оценок за счёт небольшого роста дисперсии оценок.
-* Сильно уменьшить смещение оценок за счёт небольшого падения дисперсии оценок.
-* Сильно увеличить дисперсию оценок за счёт небольшого смещения оценок.
+* Растёт при росте $RSS$ и по мере удаление оценок коэффициентов от нуля. 
+* Падает при росте $RSS$ и по мере удаление оценок коэффициентов от нуля. 
+* Падает при росте $RSS$, но растёт по мере удаление оценок коэффициентов от нуля. 
+* Растёт при росте $RSS$, но падает по мере удаление оценок коэффициентов от нуля. 
+* Растёт при росте $RSS$, не зависит от удалённости оценок коэффициентов от нуля. 
+
 
 Solution
 ========
 
-Большая дисперсия и смещение — это нежелательные свойства. 
+Штрафуем за большие по модулю коэффициенты и большие квадраты остатков. 
 
 
 Meta-information
 ================
-exname: LASSO idea
+exname: LASSO penalty
 extype: schoice
 exsolution: 100000
 exshuffle: 6
