--- a/base/om_2021_fall/test_06_06.Rmd
+++ b/base/om_2021_fall/test_06_06.Rmd
@@ -1,42 +1,36 @@
 Question
 ========
 
-По набору данных cars из R оцените модель
-$$
-dist_i = \beta_1 + \beta_2 speed_i + u_i.
-$$
+Что показывает коэффициент вздутия дисперсии $VIF$ оценки коэффициента регрессии?
 
-Ошибки модели нормально распределены и удовлетворяют классическим предпосылкам. 
-
-Для машины со стартовой скоростью 20 миль в час постройте 95\%-й предиктивный интервал для 
-фактической длины тормозного пути в футах. 
-
-В ответе укажите правую границу интервала с точностью до двух знаков после десятичной точки. 
-
-
-Набор данных встроен в R и доступен по ссылке:
-https://github.com/vincentarelbundock/Rdatasets/raw/master/csv/datasets/cars.csv
+Answerlist
+----------
+* Во сколько раз дисперсия оценки коэффициента больше по сравнению 
+с идеальной ситуацией с некоррелированными предикторами. 
+* Во сколько раз дисперсия оценки коэффициента больше по сравнению 
+с идеальной ситуацией с одинаковыми предикторами. 
+* Во сколько раз дисперсия оценки коэффициента больше по сравнению 
+с идеальной ситуацией парной регрессии. 
+* Во сколько раз дисперсия оценки коэффициента больше по сравнению 
+с идеальной ситуацией со стандартизированными предикторами. 
+* Во сколько раз дисперсия оценки коэффициента больше по сравнению 
+с идеальной ситуацией с несмещёнными предикторами. 
 
 
 Solution
 ========
 
-```{r, eval=FALSE}
-model = lm(data = cars, dist ~ ...)
-new = data.frame(speed = ...)
-predict(model, ..., interval = '...')
-```
+Коэффициент вздутия $VIF$ будет равен 1, если во вспомогательной регрессии $R^2$ будет равен 0.
+
 
 
 Meta-information
 ================
-exname: prediction interval R
-extype: num
-exsolution: 92.54
-extol: 0.01
+exname: VIF meaning
+extype: schoice
+exsolution: 10000
+exshuffle: 5
 exextra[Type]: Calculation
 exextra[Language]: Russian
 exextra[Level]: Literacy
-exsection: OLS/Predictive interval
-
-
+exsection: Multicollinearity/VIF
