--- a/base/om_2021_fall/test_06_07.Rmd
+++ b/base/om_2021_fall/test_06_07.Rmd
@@ -1,35 +1,31 @@
 Question
 ========
 
-Пантелеймон оценил модель парной регрессии 
-$$
-\ln \hat y_i = 0.4 + 1.2 \ln x_i.
-$$
+Рассмотрим метод главных компонент для переменных с разными единицами измерения.
 
-Какая интерпретация уравнения является верной?
+Выберите верное утверждение.
 
 Answerlist
 ----------
-* с ростом $x$ на один процент величина $y$ растёт в среднем на 1.2 процента
-* с ростом $x$ на единицу величина $y$ растёт в среднем на 1.2 единицы
-* с ростом $x$ на один процент величина $y$ растёт в среднем на 1.2 единицы
-* с ростом $x$ на единицу величина $y$ растёт в среднем на 1.2 процента
-* с ростом $x$ на единицу величина $y$ растёт в среднем на 120 процентов
-* нет верного ответа
+* Обязательно нужно привести переменные к общему масштабу. 
+* Обязательно нужно сохранить исходные единицы измерения переменных. 
+* Необходимо и достаточно центрировать исходные переменные. 
+* Важно убедиться в некоррелированности исходных переменных. 
+* Важно убедиться в ортогональности исходных переменных. 
 
 
 Solution
 ========
 
-Коэффициент у модели в логарифмах интерпретируется как эластичность. 
+Метод главных компонент находит линейную комбинацию исходных переменных. 
 
 Meta-information
 ================
-exname: elasticity interpretation
+exname: standartization
 extype: schoice
-exsolution: 100000
-exshuffle: 6
+exsolution: 10000
+exshuffle: 5
 exextra[Type]: Calculation
 exextra[Language]: Russian
 exextra[Level]: Literacy
-exsection: OLS/Coefficients interpretation
+exsection: PCA
