--- a/base/om_2021_fall/test_06_08.Rmd
+++ b/base/om_2021_fall/test_06_08.Rmd
@@ -1,27 +1,31 @@
 Question
 ========
 
-Пантелеймон предполагает, что зависимость $y$ от $x$ линейная.
-У Пантелеймона данные по 10 городам.
-Он считает, что коэффициент наклона не зависит от города, 
-а вот константа в каждом городе может быть своя. 
+Рассмотрим веса, с которыми исходные переменные входят в первую главную компоненту. 
 
-Всего у Пантелеймона 200 наблюдений. 
+Выберите верное утверждение.
 
-Сколько дамми-переменных понадобиться ввести Пантелеймону в дополнение к модели парной регрессии? 
+Answerlist
+----------
+* Сумма квадратов весов равна 1. 
+* Сумма весов равна 1, веса неотрицательные. 
+* Сумма весов равна 1, веса могут быть отрицательными. 
+* Сумма весов равна 0.
+* Сумма модулей весов равна 1.
+* Веса могут быть абсолютно произвольными. 
 
 Solution
 ========
 
-Количество дамми-переменных на одну меньше числа значений признака.
+Метод главных компонент находит линейную комбинацию исходных переменных. 
 
 Meta-information
 ================
-exname: number of dummy variables
-extype: num
-exsolution: 9
-extol: 0.01
+exname: weights of original variables
+extype: schoice
+exsolution: 100000
+exshuffle: 6
 exextra[Type]: Calculation
 exextra[Language]: Russian
 exextra[Level]: Literacy
-exsection: OLS/Dummy variables
+exsection: PCA
