--- a/base/om_2021_fall/test_06_09.Rmd
+++ b/base/om_2021_fall/test_06_09.Rmd
@@ -1,32 +1,29 @@
 Question
 ========
 
-Сулейман оценил две модели множественной регрессии по 304 наблюдениям.
-Модель А:
-$$
-y_i = \beta_1 + \beta_2 x_i + \beta_3 z_i + \beta_4 w_i + u_i, RSS_a = 150.
-$$
-Модель Б:
-$$
-y_i = \beta_1 + \beta_4 w_i + u_i, RSS_b = 200.
-$$
+Выберите верное утверждение про главные компоненты.
 
-Найдите значение $F$-статистики для проверки гипотезы об истинности ограниченной модели. 
-
+Answerlist
+----------
+* Главные компоненты некоррелированны. 
+* Главные компоненты сохраняют среднее значение исходных переменных. 
+* Главные компоненты имеют единичную длину. 
+* Первая главная компонента имеет наименьшую выборочную дисперсию. 
+* Первая главная компонента совпадает с зависимой переменной. 
+* Первая главная компонента имеет наибольшее среднее значение. 
 
 Solution
 ========
-$$
-F = \frac{(RSS_r - RSS_{ur}) / r}{RSS_{ur} / (n - k_{ur})}.
-$$
+
+Метод главных компонент находит линейную комбинацию исходных переменных. 
 
 Meta-information
 ================
-exname: F statistics
-extype: num
-exsolution: 100
-extol: 0.01
+exname: principal components
+extype: schoice
+exsolution: 100000
+exshuffle: 6
 exextra[Type]: Calculation
 exextra[Language]: Russian
 exextra[Level]: Literacy
-exsection: OLS/Nested models F-test
+exsection: PCA
