--- a/base/om_2021_fall/test_06_05.Rmd
+++ b/base/om_2021_fall/test_06_05.Rmd
@@ -10,7 +10,7 @@ Answerlist
 * Падает при росте $RSS$, но растёт по мере удаление оценок коэффициентов от нуля. 
 * Растёт при росте $RSS$, но падает по мере удаление оценок коэффициентов от нуля. 
 * Растёт при росте $RSS$, не зависит от удалённости оценок коэффициентов от нуля. 
-
+* Не зависит от $RSS$, падает по мере удаление оценок коэффициентов от нуля. 
 
 Solution
 ========
