--- a/base/om_2021_fall/test_09_04.Rmd
+++ b/base/om_2021_fall/test_09_04.Rmd
@@ -1,30 +1,33 @@
 Question
 ========
 
-Для какой цели используют LASSO?
+Исследователь Леонардо оценил модель логистической регрессии 
+$\hat \mathbb P(y_i = 1) = \Lambda(0.4 - 0.2 x_i)$.
+
+Найдите по этой модели прогноз вероятности для $x_i = 2$.
+
 
 Answerlist
 ----------
-* Сильно уменьшить дисперсию оценок за счёт небольшого смещения оценок.
-* Сильно уменьшить дисперсию оценок без смещения оценок.
-* Сильно увеличить дисперсию оценок без смещения оценок.
-* Сильно уменьшить смещение оценок за счёт небольшого роста дисперсии оценок.
-* Сильно уменьшить смещение оценок за счёт небольшого падения дисперсии оценок.
-* Сильно увеличить дисперсию оценок за счёт небольшого смещения оценок.
+* $0.5$
+* $1$
+* $0$
+* $0.25$
+* $0.75$
+* $\exp(0.5)$
 
 Solution
 ========
 
-Большая дисперсия и смещение — это нежелательные свойства. 
-
+Подставляем ноль в логистическую функцию. 
 
 Meta-information
 ================
-exname: LASSO idea
+exname: zero in logistic function
 extype: schoice
 exsolution: 100000
 exshuffle: 6
 exextra[Type]: Calculation
 exextra[Language]: Russian
 exextra[Level]: Literacy
-exsection: LASSO
+exsection: Logit
