--- a/base/om_2021_fall/test_09_05.Rmd
+++ b/base/om_2021_fall/test_09_05.Rmd
@@ -1,30 +1,31 @@
 Question
 ========
 
-Выберите верное утверждение про штрафную функцию LASSO.
+Как изменятся оценки логистической регрессии, 
+если заменить у зависимой переменной нули единицами, 
+а единицы — нулями?
 
 Answerlist
 ----------
-* Растёт при росте $RSS$ и по мере удаление оценок коэффициентов от нуля. 
-* Падает при росте $RSS$ и по мере удаление оценок коэффициентов от нуля. 
-* Падает при росте $RSS$, но растёт по мере удаление оценок коэффициентов от нуля. 
-* Растёт при росте $RSS$, но падает по мере удаление оценок коэффициентов от нуля. 
-* Растёт при росте $RSS$, не зависит от удалённости оценок коэффициентов от нуля. 
-* Не зависит от $RSS$, падает по мере удаление оценок коэффициентов от нуля. 
+* Оценки коэффициентов поменяют знак.
+* Оценки коэффициентов не изменятся. 
+* Оценки коэффициентов увеличатся. 
+* Оценки коэффициентов уменьшатся. 
+* Новые оценки коэффициентов будут обратными к старым. 
+* Оценки коэффициентов изменятся непредсказуемым образом. 
 
 Solution
 ========
 
-Штрафуем за большие по модулю коэффициенты и большие квадраты остатков. 
-
+Можно посмотреть на условия первого порядка или провести эксперимент.
 
 Meta-information
 ================
-exname: LASSO penalty
+exname: change of sign
 extype: schoice
 exsolution: 100000
 exshuffle: 6
 exextra[Type]: Calculation
 exextra[Language]: Russian
 exextra[Level]: Literacy
-exsection: LASSO
+exsection: Logit
