--- a/base/om_2021_fall/test_09_06.Rmd
+++ b/base/om_2021_fall/test_09_06.Rmd
@@ -1,36 +1,29 @@
 Question
 ========
 
-Что показывает коэффициент вздутия дисперсии $VIF$ оценки коэффициента регрессии?
+Выберите верное утверждение про оценки коэффициентов логит-модели. 
 
 Answerlist
 ----------
-* Во сколько раз дисперсия оценки коэффициента больше по сравнению 
-с идеальной ситуацией с некоррелированными предикторами. 
-* Во сколько раз дисперсия оценки коэффициента больше по сравнению 
-с идеальной ситуацией с одинаковыми предикторами. 
-* Во сколько раз дисперсия оценки коэффициента больше по сравнению 
-с идеальной ситуацией парной регрессии. 
-* Во сколько раз дисперсия оценки коэффициента больше по сравнению 
-с идеальной ситуацией со стандартизированными предикторами. 
-* Во сколько раз дисперсия оценки коэффициента больше по сравнению 
-с идеальной ситуацией с несмещёнными предикторами. 
+* Оценки коэффициентов являются асимптотически нормальными. 
+* Доверительный интервал для коэффициентов строится с помощью t-распределения. 
+* Оценки коэффициентов не являются случайными. 
+* Оценки коэффициентов строго больше соответствующих оценок модели линейной регрессии. 
+* Оценки коэффициентов строго меньше соответствующих оценок модели линейной регрессии. 
 
 
 Solution
 ========
 
-Коэффициент вздутия $VIF$ будет равен 1, если во вспомогательной регрессии $R^2$ будет равен 0.
-
 
 
 Meta-information
 ================
-exname: VIF meaning
+exname: logit estimators distribution
 extype: schoice
 exsolution: 10000
 exshuffle: 5
 exextra[Type]: Calculation
 exextra[Language]: Russian
 exextra[Level]: Literacy
-exsection: Multicollinearity/VIF
+exsection: Logit
