--- a/base/om_2021_fall/test_09_07.Rmd
+++ b/base/om_2021_fall/test_09_07.Rmd
@@ -1,31 +1,31 @@
 Question
 ========
 
-Рассмотрим метод главных компонент для переменных с разными единицами измерения.
-
-Выберите верное утверждение.
+Выберите верное утверждение о ситуации, в которой 
+оценки логит-модели не существуют. 
 
 Answerlist
 ----------
-* Обязательно нужно привести переменные к общему масштабу. 
-* Обязательно нужно сохранить исходные единицы измерения переменных. 
-* Необходимо и достаточно центрировать исходные переменные. 
-* Важно убедиться в некоррелированности исходных переменных. 
-* Важно убедиться в ортогональности исходных переменных. 
+* Проблему разумно решить введением в целевую функцию дополнительного штрафа за отклонение оценок коэффициентов от нуля. 
+* Такая ситуация невозможна, оценки максимального правдоподобия 
+всегда существуют. 
+* Разумно включить квадраты и кросс-произведения исходных переменных. 
+* Разумно исключить из модели константу. 
+* Нужно рассмотреть пробит-модель вместо логит-модели. 
 
 
 Solution
 ========
 
-Метод главных компонент находит линейную комбинацию исходных переменных. 
+Можно также применить байесовский подход.
 
 Meta-information
 ================
-exname: standartization
+exname: non-existence of logit estimators
 extype: schoice
 exsolution: 10000
 exshuffle: 5
 exextra[Type]: Calculation
 exextra[Language]: Russian
 exextra[Level]: Literacy
-exsection: PCA
+exsection: Logit
