--- a/base/om_2021_fall/test_09_09.Rmd
+++ b/base/om_2021_fall/test_09_09.Rmd
@@ -1,29 +1,29 @@
 Question
 ========
 
-Выберите верное утверждение про главные компоненты.
+Рассмотрим метод максимального правдоподобия для оценки одного параметра. Как можно получить оценку дисперсии оценки параметра?
 
 Answerlist
 ----------
-* Главные компоненты некоррелированны. 
-* Главные компоненты сохраняют среднее значение исходных переменных. 
-* Главные компоненты имеют единичную длину. 
-* Первая главная компонента имеет наименьшую выборочную дисперсию. 
-* Первая главная компонента совпадает с зависимой переменной. 
-* Первая главная компонента имеет наибольшее среднее значение. 
+* Обратить вторую производную лог-правдоподобия со знаком минус. 
+* Обратить первую производную лог-правдоподобия со знаком минус. 
+* Посчитать вторую производную лог-правдоподобия со знаком минус. 
+* Посчитать первую производную лог-правдоподобия со знаком минус. 
+* Обратить вторую производную лог-правдоподобия.
+* Обратить первую производную лог-правдоподобия.
 
 Solution
 ========
 
-Метод главных компонент находит линейную комбинацию исходных переменных. 
+Озвучиваем формулу из лекций :)
 
 Meta-information
 ================
-exname: principal components
+exname: variance estimate for max likelihood
 extype: schoice
 exsolution: 100000
 exshuffle: 6
 exextra[Type]: Calculation
 exextra[Language]: Russian
 exextra[Level]: Literacy
-exsection: PCA
+exsection: Maximum Likelihood
