--- a/base/om_2021_fall/test_09_08.Rmd
+++ b/base/om_2021_fall/test_09_08.Rmd
@@ -1,31 +1,34 @@
 Question
 ========
 
-Рассмотрим веса, с которыми исходные переменные входят в первую главную компоненту. 
+Леонардо оценил логит-регрессию $\hat \mathbb P(y_i = 1) = \Lambda ( 0.3 - 0.6 x_i + 0.5 z_i)$. 
+Для некоторого наблюдения прогноз вероятности равен $\hat \mathbb P(y_i = 1) = 0.7$. 
 
-Выберите верное утверждение.
+Оцените предельный эффект увеличения $z_i$ для этого наблюдения.
 
 Answerlist
 ----------
-* Сумма квадратов весов равна 1. 
-* Сумма весов равна 1, веса неотрицательные. 
-* Сумма весов равна 1, веса могут быть отрицательными. 
-* Сумма весов равна 0.
-* Сумма модулей весов равна 1.
-* Веса могут быть абсолютно произвольными. 
+* $0.105$
+* $0.5$
+* $0.35$
+* $0.15$
+* $0.7$
+* недостаточно информации
 
 Solution
 ========
 
-Метод главных компонент находит линейную комбинацию исходных переменных. 
+$$
+\Lambda'(t) = \Lambda(t)(1 - \Lambda(t))
+$$
 
 Meta-information
 ================
-exname: weights of original variables
+exname: marginal effect
 extype: schoice
 exsolution: 100000
 exshuffle: 6
 exextra[Type]: Calculation
 exextra[Language]: Russian
 exextra[Level]: Literacy
-exsection: PCA
+exsection: Logit
