--- a/base/om_2021_fall/test_09_03.Rmd
+++ b/base/om_2021_fall/test_09_03.Rmd
@@ -2,7 +2,7 @@ Question
 ========
 
 Рассмотрим логистическую модель с константой и одним регрессором $x_i$. 
-Обозначим логарифм отношения шансов как $h(x_i) = \ln (\mathbb P(y_i = 1) / \mathbb P(y_i = 0))$.
+Обозначим логарифм шансов как $h(x_i) = \ln (\mathbb{P}(y_i = 1) / \mathbb{P}(y_i = 0))$.
 
 Найдите верное утверждение про производную $h'(x_i)$.
 
