--- a/base/om_2021_fall/test_09_04.Rmd
+++ b/base/om_2021_fall/test_09_04.Rmd
@@ -2,7 +2,7 @@ Question
 ========
 
 Исследователь Леонардо оценил модель логистической регрессии 
-$\hat \mathbb P(y_i = 1) = \Lambda(0.4 - 0.2 x_i)$.
+$\hat{\mathbb{P}}(y_i = 1) = \Lambda(0.4 - 0.2 x_i)$.
 
 Найдите по этой модели прогноз вероятности для $x_i = 2$.
 
