--- a/base/om_2021_fall/test_09_08.Rmd
+++ b/base/om_2021_fall/test_09_08.Rmd
@@ -1,8 +1,8 @@
 Question
 ========
 
-Леонардо оценил логит-регрессию $\hat \mathbb P(y_i = 1) = \Lambda ( 0.3 - 0.6 x_i + 0.5 z_i)$. 
-Для некоторого наблюдения прогноз вероятности равен $\hat \mathbb P(y_i = 1) = 0.7$. 
+Леонардо оценил логит-регрессию $\hat{\mathbb{P}}(y_i = 1) = \Lambda ( 0.3 - 0.6 x_i + 0.5 z_i)$. 
+Для некоторого наблюдения прогноз вероятности равен $\hat{\mathbb{P}}(y_i = 1) = 0.7$. 
 
 Оцените предельный эффект увеличения $z_i$ для этого наблюдения.
 
