--- a/base/om_2021_fall/test_09_10.Rmd
+++ b/base/om_2021_fall/test_09_10.Rmd
@@ -1,9 +1,9 @@
 Question
 ========
 
-Леонардо оценил модель логистической регрессии $\hat \mathbb P(y_i = 1) = \Lambda(2 + 0.05 x_i - 0.07 z_i)$.
+Леонардо оценил модель логистической регрессии $\hat{\mathbb{P}}(y_i = 1) = \Lambda(2 + 0.05 x_i - 0.07 z_i)$.
 
-Найдите предел прогноза вероятности $\hat \mathbb P(y_i = 1)$ при $z_i$ стремящемся к плюс бесконечности. 
+Найдите предел прогноза вероятности $\hat{\mathbb{P}}(y_i = 1)$ при $z_i$ стремящемся к плюс бесконечности. 
 
 Solution
 ========
