misprint in train 5, test 6, train 6

--- a/base/om_ts_2022_spring/train_05_03_num_rus.Rmd
+++ b/base/om_ts_2022_spring/train_05_03_num_rus.Rmd
@@ -9,7 +9,7 @@ ans = round(inv_min, digits=2)
 Question
 ========
 
-Корни характеристического многочлена $AR$-части уравнения равны $\ell_1 = `r x1`$ и $\ell_2 = `r x2`$.
+Корни характеристического многочлена $AR$-части уравнения равны $\lambda_1 = `r x1`$ и $\lambda_2 = `r x2`$.
 
 Найдите наименьший корень лагового многочлена $AR$-части. 
 
