--- a/base/om_ts_2022_spring/train_03_07_num_rus.Rmd
+++ b/base/om_ts_2022_spring/train_03_07_num_rus.Rmd
@@ -1,18 +1,18 @@
 Question
 ========
 
-Рассмотрим ETS модель с мультипликативной сезонностью для месячных данных. 
+Рассмотрим ETS модель с мультипликативной сезонностью и мультипликативной ошибкой для месячных данных. 
 Известно, что $s_{5} = 0.8$, $u_{17} = 1.2$, $u_{29} = -1$, $\gamma = 0.5$. 
 
 
-На сколько процентов сезонный эффект уменьшает значение наблюдаемого ряда в момент времени $t=29$?
+На сколько процентов сезонный эффект уменьшает значение наблюдаемого ряда в момент времени $t=41$?
 
 В ответе укажите целое число процентов. 
 
 Solution
 ========
 
-Найдите $s_{29}$ и проинтерпретируйте. 
+Найдите $s_{41}$ и проинтерпретируйте. 
 
 Meta-information
 ================
